ajout de l'en tete

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr"> 
+    <head>
+        <title>bonjour
+            
+        </title>
+    </head>
     <body>
         <h1>
             Ma premiere page web
