--- a/a-propos.html
+++ b/a-propos.html
@@ -5,10 +5,12 @@
 <title>A propros de bacar said</title>
     </head>
     <body>
-        <h1>A propos de bacar said</h1>
-    <p>photographe depuis plus de 5 ans,je réalise des reportages aux photos dynamyque et pertinentes pourvos projets de communication.
-        créativité , qualité; et sérénité pour vous!
-         je gére tout; depuis la direction artistique , la réalisation du reportage, jusqu'a la livraison de vos photos retouchées,pretes a l'emploi.</p>
+        <h1 id="labaisse">A propos de bacar said</h1>
+    <p>photographe depuis plus de 5 ans
+    ,je réalise des reportages aux photos dynamyque et pertinentes pourvos projets de communication.
+    créativité , qualité; et sérénité pour vous!
+      je gére tout; depuis la direction artistique , 
+         la réalisation du reportage, jusqu'a la livraison de vos photos retouchées,pretes a l'emploi.</p>
     <h2>services</h2>
     <ul>
         <li>portrait seul ou à plusieurs</li>
@@ -20,6 +22,13 @@
     <a href="https://www.renault.fr/vehicules-gammes-precedentes/kadjar.html">lien vers google</a><br/>
         <a href="mailot:zatfawasse.@mail.com">email</a><br/>
         <a href="tel:+2693302850"> phone</a><br/>
+ <h6> lien vers ma page </h6>
+ <a href="index.html" target="_blank" > acceuil</a>
+<h3> la baisse</h3>
+<a href="#labaisse">luxe</a>
+<img src="https://th.bing.com/th/id/R.7a05d9829ce64acb0a25d9bb6f3bfc76?rik=vMBp2fGiSwKDiA&pid=ImgRaw&r=0"/>
+
+
 
 
 
