--- a/a-propos.html
+++ b/a-propos.html
@@ -3,6 +3,7 @@
     <head>
 <meta charset="UTF-8">
 <title>A propros de bacar said</title>
+<link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1 id="labaisse">A propos de bacar said</h1>
@@ -17,24 +18,18 @@
         <li>shooting mode</li>
         <li>Retouche sur messure</li>
         <li>Développement</li>
-
+        <h2> mes reves deviennent la réaliter quand mes cochemars me submerge.</h2>
     </ul>
     <a href="https://www.renault.fr/vehicules-gammes-precedentes/kadjar.html">lien vers google</a><br/>
         <a href="mailot:zatfawasse.@mail.com">email</a><br/>
         <a href="tel:+2693302850"> phone</a><br/>
- <h6> lien vers ma page </h6>
+ <h3> lien vers ma page </h3>
  <a href="index.html" target="_blank" > acceuil</a>
-<h3> la baisse</h3>
+<h2>etre ou ne pas etre et moi je suis,la composition de mon act est mon corps </h2>
 <a href="#labaisse">luxe</a>
-<img src="https://th.bing.com/th/id/R.7a05d9829ce64acb0a25d9bb6f3bfc76?rik=vMBp2fGiSwKDiA&pid=ImgRaw&r=0"/>
-
-
-
-
-
-           
-
-
+<img src=""/>
+<img src="puma.jfif" title="la qualité est indispensable">
+<img src="simba.jpg"alt="laqualitéestindispensable" title="la qualité est indispensable"/>
 
 
 
