--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
         <title>bonjour
 
         </title>
+        <meta charset="UTF-8">
+<link rel="stylesheet" href="style.css"/>
+    
     </head>
     <body>
         <h1>
             Ma premiere page web
         </h1>
         <h2>la consomation </h2>
-        <h3>la baisse</h3>
+        <h2>dans une univert de paix est tranquilité la séréniter est ma priorité</h2>
+        <h2> etre ou ne pas etre et moi je suis,la composition de mon act est mon corps</h2>
         <h4>équivalent</h4>
         <h5>code</h5>
     
