ajout d'un élement

--- a/a-propos.html
+++ b/a-propos.html
@@ -2,11 +2,16 @@
 <html lang="fr"> 
     <head>
 <meta charset="UTF-8">
-<title>A propros de bacar said</title>
+<title>una vida mejor</title>
 <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:italy=swap">
     </head>
     <body>
-        <h1 id="labaisse">A propos de bacar said</h1>
+      <p class="maclasse">la ou le vrai du faux deviennent une toute autre réalitée</p> 
+      <p>ma marque est mon identité</p>
+        <h1 id="labaisse">l'éducation est la chose la mieux partager </h1>
     <p>photographe depuis plus de 5 ans
     ,je réalise des reportages aux photos dynamyque et pertinentes pourvos projets de communication.
     créativité , qualité; et sérénité pour vous!
@@ -28,9 +33,9 @@
 <h2>etre ou ne pas etre et moi je suis,la composition de mon act est mon corps </h2>
 <a href="#labaisse">luxe</a>
 <img src=""/>
-<img src="puma.jfif" title="la qualité est indispensable">
-<img src="simba.jpg"alt="laqualitéestindispensable" title="la qualité est indispensable"/>
-
+<img src="plume.avif" title="la qualité est indispensable">
+<img src="ptotagora.jpg"alt="laqualitéestindispensable" title="la qualité est indispensable"/>
+<img src="socrat.jpeg">
 
 
     
