ajoute styile.css

--- a/a-propos.html
+++ b/a-propos.html
@@ -1,42 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr"> 
     <head>
-<meta charset="UTF-8">
-<title>una vida mejor</title>
-<link rel="stylesheet" href="style.css">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:italy=swap">
+    <title>Bacar Said</title>
+
+<link rel="stylesheet" href="style.css"/>
+<link rel="preconnect" href="https://fonts.googleapis.com"/>
+<link rel="preconnect" href="https://fonts.gstatic.com"crossorigin/>
+<link href="https://fonts.googleapis.com/css2?family=Montserra:ital,wght&display=swap" rel="stylesheet"/>
     </head>
     <body>
-      <p class="maclasse">la ou le vrai du faux deviennent une toute autre réalitée</p> 
-      <p>ma marque est mon identité</p>
-        <h1 id="labaisse">l'éducation est la chose la mieux partager </h1>
-    <p>photographe depuis plus de 5 ans
-    ,je réalise des reportages aux photos dynamyque et pertinentes pourvos projets de communication.
-    créativité , qualité; et sérénité pour vous!
-      je gére tout; depuis la direction artistique , 
-         la réalisation du reportage, jusqu'a la livraison de vos photos retouchées,pretes a l'emploi.</p>
-    <h2>services</h2>
-    <ul>
-        <li>portrait seul ou à plusieurs</li>
-        <li>shooting mode</li>
-        <li>Retouche sur messure</li>
-        <li>Développement</li>
-        <h2> mes reves deviennent la réaliter quand mes cochemars me submerge.</h2>
-    </ul>
-    <a href="https://www.renault.fr/vehicules-gammes-precedentes/kadjar.html">lien vers google</a><br/>
-        <a href="mailot:zatfawasse.@mail.com">email</a><br/>
-        <a href="tel:+2693302850"> phone</a><br/>
- <h3> lien vers ma page </h3>
- <a href="index.html" target="_blank" > acceuil</a>
-<h2>etre ou ne pas etre et moi je suis,la composition de mon act est mon corps </h2>
-<a href="#labaisse">luxe</a>
-<img src=""/>
-<img src="plume.avif" title="la qualité est indispensable">
-<img src="ptotagora.jpg"alt="laqualitéestindispensable" title="la qualité est indispensable"/>
-<img src="socrat.jpeg">
+        <h1>
+            A propos de bacar Said
+        </h1>
+        <p>photographe depuis plus de 5 ans
+            ,je réalise des reportages aux photos dynamyque et pertinentes pourvos projets de communication.
+            créativité , qualité; et sérénité pour vous!
+              je gére tout; depuis la direction artistique , 
+                 la réalisation du reportage, jusqu'a la livraison de vos photos retouchées,pretes a l'emploi.</p>
+    
+            <h2>services</h2>
 
-
+       <ul>
+        <li>Portrait seul ou a plusieurs</li>
+        <li>Shooting Mode</li>
+        <li>retouche sur messure</li>
+        <li>Dévelopement</li>
+       </ul>
     
     </body>
+</html>
