ajoute un élment

--- a/navigation.html
+++ b/navigation.html
@@ -1,22 +1,29 @@
 <!DOCTYPE html>
 <html lang="fr"> 
-    <head>
-       <meta charset="UTF-8">
-       <title>barre de nav</title>
-        <link href="nav.css" rel="stylesheet"/>
+<head>
+<meta charset="UTF-8">
+     <title>barre de nav</title>
+     <link href="nav.css" rel="stylesheet"/>
     </head>
     <body>
-      <nav class="bienvenus">
-        <ol>
-            <li class="bienvenus"><a href="le jour a venir">wasse</a>
-            </li>
-            <li class="c'est fait"><a href="il était une fois">la joie</a>
-            </li>
+    </nav>
+    <ol>
+        <li><a href="#aceuil">autre page</a></li>
+        <li><a href="#merci de votre passage">aprécier</a></li>
+    </li><a href="#hello"> plus d'option"> </a></li>
+</ol>
+</nav>
+                <h1>la vie en rose</h1>
+            <P> le solei permet de nous ébouillir mais a la fois etre notre plus grand crainte</P>
             
 
-        </ol>
-
-      </nav>      
             
-    </body>
+     </body>
+     <footer>
+ <ul>
+  <li>fraicheur</li>
+  <li>fraise</li>
+  <li>pomme</li>
+ </ul>
+     </footer>
 </html>
