ajoute de formulaire

--- a/formulaire.html
+++ b/formulaire.html
@@ -10,11 +10,11 @@
                 <label>prenom:</label>
                 <input type="text" name="PRENOM" placeholder="votre prenom"/>
             </p>
-        </P>
+        <p>
         <label>projet profesonnel:</label>
         <textarea name="projet"></textarea> <!--pour defir une grande zone de saisie par l' utulisateur-->
         </p>
-        <input type="date"
+        <input type="date"/>
     </form>
         </body>
         </html>
