--- a/a-propos.html
+++ b/a-propos.html
@@ -7,18 +7,17 @@
 <link rel="preconnect" href="https://fonts.googleapis.com"/>
 <link rel="preconnect" href="https://fonts.gstatic.com"crossorigin/>
 <link href="https://fonts.googleapis.com/css2?family=Montserra:ital,wght&display=swap" rel="stylesheet"/>
-    </head>
-    <body>
-        <h1>
-            A propos de bacar Said
-        </h1>
-        <p>photographe depuis plus de 5 ans
-            ,je réalise des reportages aux photos dynamyque et pertinentes pourvos projets de communication.
-            créativité , qualité; et sérénité pour vous!
-              je gére tout; depuis la direction artistique , 
-                 la réalisation du reportage, jusqu'a la livraison de vos photos retouchées,pretes a l'emploi.</p>
+ </head>
+ <body>
+ <h1> A propos de bacar Said
+ </h1>
+ <p>photographe depuis plus de 5 ans
+  ,je réalise des reportages aux photos dynamyque et pertinentes pourvos projets de communication.
+ créativité , qualité; et sérénité pour vous!
+je gére tout; depuis la direction artistique , 
+ la réalisation du reportage, jusqu'a la livraison de vos photos retouchées,pretes a l'emploi.</p>
     
-            <h2>services</h2>
+ <h2>services</h2>
 
        <ul>
         <li>Portrait seul ou a plusieurs</li>
