--- a/tableau.html
+++ b/tableau.html
@@ -7,12 +7,15 @@
     </head>
     <body>
         <!--Début du tableau-->
-<table>
+<table> 
+    <!--titre du tableau-->
+    <caption>une vente a petit prix</caption>
     <!--Entete du tableau-->
-    <th>
-        <td>Nom</td>
-        <td>Prénom</td>
-    </th>
+    <tr>
+        <th>Nom</th>
+        <th>Prénom</th>
+        <th>ville</th>
+    </tr>
     <!--premiére ligne du tableau-->
     <tr>
         <td>colone 1</td>
@@ -20,9 +23,11 @@
         <td>colone 3</td>
     </tr>
     <!-- Deuxiéme ligne du tableau-->
-     <td>ballon</td> <!--1ere colone de la 2e ligne-->
-     <td>nuage</td>
-     <td></td>
+     <td>claquette</td> <!--1ere colone de la 2e ligne-->
+     <td>talon</td>
+     <td>basket</td>
+</tr>
 </table>
     </body>
+<footer>une versionde.2026</footer>
 </html>
